styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');


*{
    margin: 0;
    padding: 0;
    font-family: "Mulish", sans-serif;
    font-weight: 400;
    font-size: 1rem;
}


/* shared styles  */
body{
    font-family: "Mulish", sans-serif;
    font-weight: 400;
    font-size: 1rem;
}
.text-primary{
    color: rgba(19, 19, 24, 0.70);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.625rem;
}

.container{
    max-width: 1440px;
    margin: 0 auto;
    padding: 0 9.375%;
}

.btn-primary{
    border-radius: 8px;
    background: #FF5400;
    color: #FFF;
    text-align: center;
    font-size: 1.25rem;
    font-weight: 800;
    padding: 13px 35px;
    border: 0;
    cursor: pointer;
}

.btn-primary:hover{
    background-color: #ee814a;
}

.popular-tour, .destination,.service, .perfect-place,.newsletter, .deals-discount, .download{
    margin: 100px auto;
}



/* header  */


.nav-bar{
    margin: 52px 0 49px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.nav-logo,.footer-logo{
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo-img img{
    width: 100%;
}
.logo-img{
    width: fit-content;
}

.nav-logo>h3,.footer-logo>h3{
    color: #131318;
    font-size: 2.25rem;
    font-weight: 800;
    padding-left: 16px;
}

.nav-logo h3>span, .footer-logo h3>span{
    color: #FF5400;
    font-size: 2.25rem;
    font-weight: 800;
}

.nav-pages{
    display: flex;
    width: 61%;
    justify-content: flex-end;

}

.nav-menu{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    gap: 30px;
    align-items: center;
}

.nav-pages .fa-solid{
    display: none;
}

.nav-menu a{
    text-decoration: none;
    color: #424247;
    font-size: 1.125rem;
    font-weight: 700;
}

/* .nav-menu :first-child{
    color: #FF5400;
} */

.nav-menu a:hover{
    color: #FF5400;
    font-weight: 700;
}

.banner{
    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url("../Images/Group\ 13\ \(1\)\ \(1\).png");
    background-size: cover;
    border-radius: 16px;
    background-repeat: no-repeat;
    background-position: center;
}

.banner-content{
    padding: 106px 0;
}

.banner-text{
    text-align: center;
    max-width: 676px;
    margin: 0 auto;
}

.banner-title{
    font-size: 4rem;
    font-weight: 800;
    color: #fff;
}

.banner-description{
    color: #fff;
    margin: 24px 0 48px 0;
}

.banner-form{
    border-radius: 8px;
    background: rgba(255, 255, 255, 0.30);
    padding: 16px;
    margin: 0 15.81196581196581%;

}

.banner-form form{
    display: flex;
    gap: 24px;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: 0 auto;
    height: 52px;
}

.banner-form form input,.banner-form form select{
    width: 25%;
    height: 100%;
    border-radius: 8px;
    background: #FFF;
    padding-left: 16px;
    border: 0;
    outline: none;
}


.banner-form form select, .banner-form form input::-webkit-input-placeholder{
    color: rgba(19, 19, 24, 0.50);
}


.banner .banner-form .btn-primary{
    font-weight: 700;
    color: #FFF;
    width: 25%;
}

.fa-solid{
    margin-right: 8px;
}


/* main  */




/* popular tour section */
.popular-tour-content, .perfect-place-content{
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 50px;

}

.popular-tour-img img, .perfect-place-img img{
    width: 100%;
}

.popular-tour-text{
    max-width: 577px;
}

.popular-tour-head, .perfect-place-head,.destination-heading, .service-head,.deals-title{
    color: #131318;
    font-size: 2.5rem;
    font-weight: 800;
    margin-bottom: 24px;
}

.tour-promise{
    padding-left: 25px;
    margin: 24px 0;
}

.tour-promise li, .perfect-place-list li{
    margin-top: 16px;
}

.popular-tour-text button, .perfect-place-text button{
    margin-top: 32px;
}


/* Choose Your Destination  */

.destination-text,.service-text, .deals-title-description{
    text-align: center;
    max-width: 643px;
    margin: 0 auto 48px;
}




.grid-container{
    display: grid;
    grid-template-columns: repeat(12,1fr);
    grid-template-rows: auto;
    gap:1.6666666666666667%;
}

.destination-img img{
    width: 100%;
}

.destination-img{
    width: 100%;
    position: relative;
}



.place-name{
    color: #FFF;
    text-align: center;
    font-size: 1.75rem;
    font-weight: 800;
    z-index: 1;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    position: absolute;
}

#img-box-1, #img-box-2{
    grid-column: span 6;
}

#img-box-3{
    grid-column: span 4;
}
#img-box-4{
    grid-column: span 5;
}
#img-box-5{
    grid-column: span 3;
}
#img-box-6{
    grid-column: span 5;
}
#img-box-7{
    grid-column: span 7;
}


/* service  */

.service-type{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    gap:24px;
}

.type-box{
    border-radius: 16px;
    border: 1px solid rgba(41, 206, 246, 0.20);
    background: rgba(41, 206, 246, 0.05);
    max-width: 573px;
    padding: 32px;
}

.type-box:nth-child(2n+1){
    background: rgba(251, 181, 99, 0.05);
    border: 1px solid rgba(251, 181, 99, 0.20);


}

.type-head, .newsletter-head, .deals-head{
    color: #131318;
    font-size: 1.5rem;
    font-weight: 800;
    margin-bottom: 16px;
}

.type-logo{
    margin-bottom: 32px;
}

/* deals and discount  */

.btn-all-pkg{
    margin-top: 48px;
    display: flex;
    justify-content: center;
}
.deals-discount-img-box{
    border-radius: 16px;
    max-width: 1170px;
    max-height: 500px;
    background-image: url("../Images/Group\ 39.png");
    background-size: cover;
    padding: 11.2% 4.786324786324787% 11.2% 45.72%;
    margin-bottom: 24px;
}

.deals-discount-img-box:nth-child(2n){
    background-image: url("../Images/Group\ 40.png");
    padding: 11.2% 45.72% 11.2% 4.786324786324787%;
}

.background-img img{
    width: 100%;
}
/* ... */

